// Vitest Snapshot v1

exports[`SignInUpMenu > matches snapshot in en 1`] = `
<nav
  class="menu"
  data-v-e9db1b61=""
>
  <ul
    data-v-e9db1b61=""
  >
    
    <li
      data-v-e9db1b61=""
    >
      <a
        data-v-e9db1b61=""
      >
        Signin
      </a>
    </li>
    <li
      data-v-e9db1b61=""
    >
      <a
        data-v-e9db1b61=""
      >
        Signup
      </a>
    </li>
    
  </ul>
</nav>
`;

exports[`SignInUpMenu > matches snapshot in fr 1`] = `
<nav
  class="menu"
  data-v-e9db1b61=""
>
  <ul
    data-v-e9db1b61=""
  >
    
    <li
      data-v-e9db1b61=""
    >
      <a
        data-v-e9db1b61=""
      >
        Connexion
      </a>
    </li>
    <li
      data-v-e9db1b61=""
    >
      <a
        data-v-e9db1b61=""
      >
        Inscription
      </a>
    </li>
    
  </ul>
</nav>
`;
